Removed unnecessary div that wrapped the table in third navigation li and fixed CSS grouping

--- a/main.css
+++ b/main.css
@@ -1,21 +1,27 @@
-/* -- DEFAULT -- */
+/* -- CSS SYNTAX GROUPING --
+1. Position: position, top, bottom, etc.;
+2. Box Model: display, float, height, width, margin, padding, etc.;
+3. Typographic: font-size, font-family, line-height, color, etc.;
+4. Visual: border, border-radius, box-shadow, background, opacity, etc.;
+-- */
 
+/* -- DEFAULT/RESET -- */
 body {
-	font-family: arial, sans-serif;
-	font-size: 13px;
 	margin: 0;
 	padding: 0;
 	width: 100%;
+	font-family: arial, sans-serif;
+	font-size: 13px;
 }
 
 div {
-display: table;
-margin: auto;
+	display: table;
+	margin: auto;
 }
 
 li {
-	display: inline-block;
 	padding: 0 8px 0px 8px;
+	display: inline-block;
 }
 
 
@@ -25,26 +31,26 @@ li {
 	padding-right: 20px;
 }
 .sign-in {
+	padding: 5px 10px;
 	color: #fff;
 	font-weight: bold;
-	padding: 5px 10px;
-	border: 1px solid #4285f4;
-	border-radius: 2px;
 	background: -webkit-linear-gradient(top,#4387fd,#4683ea);
 	background: -moz-linear-gradient(top,#4387fd,#4683ea);
 	background: -o-linear-gradient(top,#4387fd,#4683ea);
 	background: linear-gradient(top,#4387fd,#4683ea);
+	border: 1px solid #4285f4;
+	border-radius: 2px;
 }
 .sign-in:hover {
+	padding: 5px 10px;
 	color: #fff;
 	font-weight: bold;
-	padding: 5px 10px;
-	border: 1px solid #4285f4;
-	border-radius: 2px;
 	background: -webkit-linear-gradient(top,#4387fd,#4683ea);
 	background: -moz-linear-gradient(top,#4387fd,#4683ea);
 	background: -o-linear-gradient(top,#4387fd,#4683ea);
 	background: linear-gradient(top,#4387fd,#4683ea);
+	border: 1px solid #4285f4;
+	border-radius: 2px;
 	box-shadow: 0px 0.5px 0px #888888;
 }
 .boxes {
@@ -60,7 +66,7 @@ td {
 
 
 /* -- LOGO -- */
-img {
+.google-logo {
 	padding-top: 145px;
 }
 
